--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
-  "name": "my-web-app",
+  "name": "financial-runway-calculator",
   "version": "1.0.0",
-  "description": "",
+  "description": "A web application to calculate financial runway",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build:css": "tailwindcss -i public/styles.css -o public/tailwind.css",
-    "watch:css": "tailwindcss -i public/styles.css -o public/tailwind.css --watch"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "concurrently": "^9.0.1",
-    "nodemon": "^2.0.22",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2"
+    "nodemon": "^2.0.7"
   }
 }
